--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.5",
-		"@babel/preset-env": "^7.22.5",
+		"@babel/cli": "^7.28.0",
+		"@babel/core": "^7.28.0",
+		"@babel/preset-env": "^7.28.0",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"browser-sync": "^2.29.3",
+		"core-js": "^3.44.0",
 		"gulp": "^4.0.2",
 		"gulp-clean-css": "^4.3.0",
 		"gulp-postcss": "^9.0.1",
@@ -25,11 +27,10 @@
 		"webpack-stream": "^7.0.0"
 	},
 	"browserslist": [
-		"last 2 chrome versions",
-		"last 2 firefox versions",
-		"last 2 ios versions"
+		">1%"
 	],
 	"dependencies": {
-		"axios": "^1.10.0"
+		"es6-promise": "^4.2.8",
+		"nodelist-foreach-polyfill": "^1.2.0"
 	}
 }
